- Added a new editing mode for drawing circles.
- Fixed: File loading would skip every 300th line (don't ask me how this managed to happen).
- Major corrections to the primitive generator:
	- Fixed: "Hi-Res" was not prepended to the names of 48/ primitives.
	- Fixed: Checking the Hi-Res option would not allow segment values over 16.
	- Added support for multiple spaces before the ring number.
- Coordinate rounding now works properly, figures scientific notation and rounds subfile position and matrix.
	Values are also now properly rounded instead of just floored, 1.2348 now rounds to 1.235 and not 1.234.
	Subfile matrix values are rounded to 4 decimals, everything else to 3 decimals.
- Implicitely-opened documents are now closed automatically when rendered unused, hopefully reducing memory
	usage somewhat.
- LDraw code parser no longer complains about scientific notation.
- Changing to draw mode while in free camera now causes the camera to be changed to top.
- When drawing polygons, line lengths are now displayed. Added a configuration option to toggle this behavior.
- Added config fields for default name/username/license. This data will be automatically filled
	into forms that require such information.
- Upon first start the configuration prompt pops up on its own, defaulting on the profile tab. This
	way the user can fill in the profile data on the first start and get that out of the way (and
	gives the opportunity to see the other config fields)
- Added new action "Add History Line" for quickly inserting 0 !HISTORY lines to headers
- Added new action "Go to line", default shortcut Ctrl-G. It should be obvious what it does.
- Added new actions "Hide" and "Reveal" which allow direct setting of objects' visibility setting instead of
	toggling it.
- Added support for logoed studs, this should satisfy Steffen. :p
- Added support for '0 BFC CLIP' and '0 BFC NOCLIP' and added auto-correction from errorneous MLCAD
	syntax ('0 BFC CERTIFY CLIP').